QQ-368 Fixed layout issue on profile mobile view

--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -2567,7 +2567,10 @@ footer {
       }
     }
     .details {
-      border-left:none;
+      border-left: none;
+      .match-height {
+        flex-direction: row;
+      }
     }
     .activity {
       .graph {
